[gd_scene load_steps=3 format=2]

[ext_resource path="res://HUD/CharacterStats/CharacterStats.gd" type="Script" id=1]
[ext_resource path="res://HUD/HealthBar/HealthBar.tscn" type="PackedScene" id=2]

[node name="CharacterStats" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 2, 2 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 128.0
margin_bottom = 92.0

[node name="CharacterSprite" type="TextureRect" parent="VBoxContainer"]
margin_right = 128.0
stretch_mode = 4

[node name="CharacterName" type="Label" parent="VBoxContainer"]
margin_top = 4.0
margin_right = 128.0
margin_bottom = 18.0
align = 1
valign = 1

[node name="HealthBar" parent="VBoxContainer" instance=ExtResource( 2 )]
margin_top = 22.0
margin_bottom = 38.0

[node name="SelectedWeapon" type="Label" parent="VBoxContainer"]
margin_top = 42.0
margin_right = 128.0
margin_bottom = 56.0
align = 1
valign = 1

[node name="MissChance" type="Label" parent="VBoxContainer"]
margin_top = 60.0
margin_right = 128.0
margin_bottom = 74.0

[node name="CritChance" type="Label" parent="VBoxContainer"]
margin_top = 78.0
margin_right = 128.0
margin_bottom = 92.0
